fixed spacing in the mine counter window

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -147,7 +147,7 @@ main {
       background-color: $inactiveCell;
       padding: 1%;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
 
       img {
         padding: 2%;
